added profile picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Léo Weissbart</title>
-		<!--<link rel="shortcut icon" href="images/manpage.ico" type="image/x-icon">-->
+		<link rel="shortcut icon" href="files/clogo.bmp" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	<body id='manpage'>
@@ -23,6 +23,10 @@
 	<li class='tc'></li>
 	<li class='tr'>Leo Weissbart</li>
 </ol>
+
+<img src="files/pp.jpg" alt="[jpg]Love your children. Or don't. --InspiroBot" class="scrot">
+
+
 <H2 id="NAME">NAME</H2>
 <p class="man-name">
 	<code>Léo Weissbart</code> - <span class="man-whatis">PhD Student at TU Delft and Radboud University</span>
