adapted html for css

--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Léo Weissbart</title>
-		<link rel="shortcut icon" href="files/clogo.bmp" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-	</head>
-	<body id='manpage'>
-	  <div class='mp' id='man'>
+
+<head>
+	<meta charset="utf-8" />
+	<title>Léo Weissbart</title>
+	<link rel="shortcut icon" href="files/clogo.bmp" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
 <div class='man-navigation' style='display:none'>
-<a href="#NAME">NAME</a>
-<a href="#SYNOPSIS">SYNOPSIS</a>
-<a href="#DESCRIPTION">DESCRIPTION</a>
-<a href="#OPTIONS">OPTIONS</a>
-<a href="#RESEARCH">RESEARCH TOPICS</a>
-<a href="#PUBLICATIONS">PUBLICATIONS</a>
-<a href="#SEE-ALSO">SEE ALSO</a>
-<a href="#COPYRIGHT">COPYRIGHT</a>
+	<a name="top" href="#NAME">NAME</a>
+	<a href="#SYNOPSIS">SYNOPSIS</a>
+	<a href="#DESCRIPTION">DESCRIPTION</a>
+	<a href="#OPTIONS">OPTIONS</a>
+	<a href="#RESEARCH">RESEARCH TOPICS</a>
+	<a href="#PUBLICATIONS">PUBLICATIONS</a>
+	<a href="#SEE-ALSO">SEE ALSO</a>
+	<a href="#COPYRIGHT">COPYRIGHT</a>
 </div>
-<ol class='man-decor man-head man head'>
-	<li class='tl'></li>
-	<li class='tc'></li>
-	<li class='tr'>Leo Weissbart</li>
-</ol>
+
+<button class="ret-button"><a href="#top">TOP</a></button>
+		
+
+<body id='manpage'>
+	  <div class='mp' id='man'>
+		<ol class='man-decor man-head man head'>
+			<li class='tl'></li>
+			<li class='tc'>Leo Weissbart</li>
+			<li class='tr'></li>
+		</ol>
 
 <img src="files/pp.jpg" alt="[jpg]Love your children. Or don't. --InspiroBot" class="scrot">
 
