--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Before that, he was an engineering student at the
 
 <H2 id="OPTIONS">OPTIONS</H2>
 <dl>
-<dt class="flush"><code>--cv</code></dt><dd><p> <a href="files/Weissbart_Léo_curriculum_vitae.pdf" >Curriculum Vitae</a></p></dd>
+<dt class="flush"><code>--cv</code></dt><dd><p> <a href="files/Weissbart_Leo_curriculum_vitae.pdf" >Curriculum Vitae</a></p></dd>
 
 <dt class="flush"><code>--gh</code></dt><dd><p> <img src="files/mark-github-256.png" alt="logo" class="logo" /><a href="https://github.com/leoweissbart" >GitHub</a> repository.</p></dd>
 
