--- a/index.html
+++ b/index.html
@@ -72,6 +72,33 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 </p>
 
 <H2 id="PUBLICATIONS">PUBLICATIONS</H2>
+<dl><dt ><code>PUB-2019-1476 -</code> <a href="https://eprint.iacr.org/2019/1476" >On the Performance of Multilayer Perceptron in Profiling Side-channel Analysis</a> [<a href="files/2019-1476.pdf">PDF</a>]
+</dt><dd>
+<p>Léo Weissbart, Stjepan Picek and Lejla Batina</p>
+<span style="color:#999;">In profiling side-channel analysis, machine learning-based attacks nowadays offer the most powerful performance. 
+	This holds especially for techniques stemming from the neural network family: multilayer perceptron and convolutional neural networks. 
+	Convolutional neural networks are often favored as state-of-the-art results suggest better performance, especially in scenarios where targets 
+	are protected with countermeasures. Multilayer perceptron receives much less attention and researchers seem less interested in this technique, 
+	narrowing the results in the literature to comparisons with convolutional neural networks. Yet, a multilayer perceptron has a much simpler structure, 
+	which enables easier hyperparameter tuning, and hopefully, could contribute to the explainability of this neural network inner working.
+	In this paper, we investigate the behavior of a multilayer perceptron in detail in the context of the side-channel analysis of AES. By exploring 
+	the sensitivity of multilayer perceptron hyperparameters over the performance of the attack, we aim at providing a better understanding of successful 
+	hyperparameters tuning, and ultimately, the performance of this algorithm. Our results show that MLP (with a proper hyperparameter tuning) can easily 
+	break implementations having a random delay or masking countermeasures. 
+</span><br /></p></dd></dl>
+
+<dl><dt ><code>PUB-2019 -</code> <a href="https://doi.org/10.1109/CANDAR.2019.00037" >A Side-Channel Attack Using Order 8 Rational Points against Curve25519 on an 8-Bit Microcontroller</a> [<a href="files/08958444.pdf">PDF</a>]
+</dt><dd>
+<p>Yoshinori Uetake,  Keiji Yoshimoto, Yuta Kodera, Léo Weissbart, Takuya Kusaka, Yasuyuki Nogami</p>
+<p><i>Seventh International Symposium on Computing and Networking - CANDAR 2019</i><br>
+<span style="color:#999;"> Among the increasing evolution of IoT devices, practical applications need reliable secure protocols to communicate with each other. 
+	A major issue for modern cryptosystems is an implementation of secure and trustworthy mechanisms to rely on. A side-channel attack against these cryptosystems 
+	may overturn the guarantee of security against conventional cyber-attacks. Elliptic curve cryptography is public-key cryptography based on elliptic curves, and 
+	one of the well-known curves is Curve25519 which is used for TLS protocols as a recommended curve. This curve is mainly implemented on limited resource devices 
+	such as microcontrollers. However, this curve poses a weakness for low-order points during a Diffie-Hellman key exchange is employed. This research demonstrates 
+	possible exploitation of a threat of order 8 rational points of Curve25519 and shows results of the side-channel attacks using order 8 rational points on an 
+	embedded system. The results indicate the order 8 rational points might be applied to key extraction as attacker sides. </span><br /></p></dd></dl>
+
 <dl><dt ><code>PUB-2019-358 -</code> <a href="https://eprint.iacr.org/2019/358" >One trace is all it takes: Machine Learning-based Side-channel Attack on EdDSA</a> [<a href="files/2019-358.pdf">PDF</a>]
 </dt><dd>
 <p>Léo Weissbart, Stjepan Picek and Lejla Batina</p>
