--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Léo Weissbart</title>
-	<link rel="shortcut icon" href="files/clogo.bmp" type="image/x-icon">
+	<link rel="shortcut icon" href="files/clogo.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
@@ -29,7 +29,7 @@
 			<li class='tr'></li>
 		</ol>
 
-<img src="files/pp.jpg" alt="[jpg]Love your children. Or don't. --InspiroBot" class="scrot">
+<img src="files/pp.jpg" alt="[jpg]Lose everything and eat dog food. --InspiroBot" class="scrot">
 
 
 <H2 id="NAME">NAME</H2>
@@ -72,6 +72,23 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 </p>
 
 <H2 id="PUBLICATIONS">PUBLICATIONS</H2>
+<dl><dt ><code>PUB-2021-720 -</code> <a href="https://eprint.iacr.org/2021/720" >On Reverse Engineering Neural Network Implementation on GPU</a> [<a href="files/2021-720.pdf">PDF</a>]
+</dt><dd>
+<p>Łukasz Chmielewski and Léo Weissbart</p>
+<span style="color:#999;">In recent years machine learning has become increasingly mainstream across industries. Additionally, Graphical Processing Unit (GPU)
+	 accelerators are widely deployed in various neural network (NN) applications, including image recognition for autonomous vehicles and natural language 
+	 processing, among others. Since training a powerful network requires expensive data collection and computing power, its design and parameters are often 
+	 considered a secret intellectual property of their manufacturers. However, hardware accelerators can leak crucial information about the secret neural 
+	 network designs through side-channels, like Electro-Magnetic (EM) emanations, power consumption, or timing. We propose and evaluate non-invasive and 
+	 passive reverse engineering methods to recover NN designs deployed on GPUs through EM side-channel analysis. We employ a well-known technique of simple
+	 EM analysis and timing analysis of NN layers execution. We consider commonly used NN architectures, namely Multilayer Perceptron and Convolutional Neural 
+	 Networks. We show how to recover the number of layers and neurons as well as the types of activation functions. Our experimental results are obtained on 
+	 a setup that is as close as possible to a real-world device in order to properly assess the applicability and extendability of our methods. We analyze 
+	 the NN execution of a PyTorch python framework implementation running on Nvidia Jetson Nano, a module computer embedding a Tegra X1 SoC that combines 
+	 an ARM Cortex-A57 CPU and a 128-core GPU within a Maxwell architecture. Our results show the importance of side-channel protections for NN accelerators
+	 in real-world applications. 
+</span><br /></p></dd></dl>
+
 <dl><dt ><code>PUB-2020-09877 -</code> <a href="https://arxiv.org/pdf/2011.09877" >Screen Gleaning: A Screen Reading TEMPEST Attack on Mobile Devices Exploiting an Electromagnetic Side Channel</a> [<a href="files/2011.09877.pdf">PDF</a>]
 </dt><dd>
 <p>Zhuoran Liu, Niels Samwel, Léo Weissbart, Zhengyu Zhao, Dirk Lauret, Lejla Batina and Martha Larson</p>
@@ -158,7 +175,7 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 
     			<ol class='man-decor man-foot man foot'>
     				<li class='tl'></li>
-    				<li class='tc'> Jan 2021</li>
+    				<li class='tc'> Feb 2022</li>
     				<li class='tr'>Léo Weissbart</li>
     			</ol>
     		</div>
