--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 <dl><dt ><code>PUB-2021-720 -</code> <a href="https://eprint.iacr.org/2021/720" >On Reverse Engineering Neural Network Implementation on GPU</a> [<a href="files/2021-720.pdf">PDF</a>]
 </dt><dd>
 <p>Łukasz Chmielewski and Léo Weissbart</p>
+<p><i>Artificial Intelligence in Hardware Security - AIHWS 2021</i><br>
 <span style="color:#999;">In recent years machine learning has become increasingly mainstream across industries. Additionally, Graphical Processing Unit (GPU)
 	 accelerators are widely deployed in various neural network (NN) applications, including image recognition for autonomous vehicles and natural language 
 	 processing, among others. Since training a powerful network requires expensive data collection and computing power, its design and parameters are often 
@@ -92,6 +93,7 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 <dl><dt ><code>PUB-2020-09877 -</code> <a href="https://arxiv.org/pdf/2011.09877" >Screen Gleaning: A Screen Reading TEMPEST Attack on Mobile Devices Exploiting an Electromagnetic Side Channel</a> [<a href="files/2011.09877.pdf">PDF</a>]
 </dt><dd>
 <p>Zhuoran Liu, Niels Samwel, Léo Weissbart, Zhengyu Zhao, Dirk Lauret, Lejla Batina and Martha Larson</p>
+<p><i>Network and Distributed System Security Symposium - NDSS 2021</i><br>
 <span style="color:#999;">    We introduce screen gleaning, a TEMPEST attack in which the screen of a mobile device is read without a visual line of sight, 
 	revealing sensitive information displayed on the phone screen. The screen gleaning attack uses an antenna and a software-defined radio (SDR) to pick up 
 	the electromagnetic signal that the device sends to the screen to display, e.g., a message with a security code. This special equipment makes it possible 
@@ -106,6 +108,7 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 <dl><dt ><code>JOU-2020-314-328 -</code> <a href="https://rdcu.be/cdBWr" >Systematic Side-Channel Analysis of Curve25519 with Machine Learning</a> [<a href="files/2020-314-328.pdf">PDF</a>]
 </dt><dd>
 <p>Léo Weissbart, Łukasz Chmielewski, Stjepan Picek and Lejla Batina </p>
+<p><i>Journal of Hardware and Systems Security - HASS 2020</i><br>
 <span style="color:#999;">Profiling attacks, especially those based on machine learning, proved to be very successful techniques in recent years when considering
 	the side-channel analysis of symmetric-key crypto implementations. At the same time, the results for implementations of asymmetric-key cryptosystems are very
 	sparse. This paper considers several machine learning techniques to mount side-channel attacks on two implementations of scalar multiplication on the elliptic
@@ -120,6 +123,7 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 <dl><dt ><code>PUB-2019-1476 -</code> <a href="https://eprint.iacr.org/2019/1476" >On the Performance of Multilayer Perceptron in Profiling Side-channel Analysis</a> [<a href="files/2019-1476.pdf">PDF</a>]
 </dt><dd>
 <p>Léo Weissbart, Stjepan Picek and Lejla Batina</p>
+<p><i>Artificial Intelligence in Hardware Security - AIHWS 2020</i><br>
 <span style="color:#999;">In profiling side-channel analysis, machine learning-based attacks nowadays offer the most powerful performance. 
 	This holds especially for techniques stemming from the neural network family: multilayer perceptron and convolutional neural networks. 
 	Convolutional neural networks are often favored as state-of-the-art results suggest better performance, especially in scenarios where targets 
@@ -147,6 +151,7 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 <dl><dt ><code>PUB-2019-358 -</code> <a href="https://eprint.iacr.org/2019/358" >One trace is all it takes: Machine Learning-based Side-channel Attack on EdDSA</a> [<a href="files/2019-358.pdf">PDF</a>]
 </dt><dd>
 <p>Léo Weissbart, Stjepan Picek and Lejla Batina</p>
+<p><i>Security, Privacy and Applied Cryptography Engineering - SPACE 2019</i><br>
 <span style="color:#999;"> Profiling attacks, especially those based on machine learning proved as very successful techniques in recent years when 
 	considering side-channel analysis of block ciphers implementations. At the same time, the results for implementations public-key cryptosystems 
 	are very sparse. In this paper, we consider several machine learning techniques in order to mount a power analysis attack on EdDSA using the curve 
