--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<li class='tr'></li>
 		</ol>
 
-<img src="files/pp.jpg" alt="[jpg]Lose everything and eat dog food. --InspiroBot" class="scrot">
+<img src="files/leo_pp.jpg" alt="[jpg]Lose everything and eat dog food. --InspiroBot" class="scrot">
 
 
 <H2 id="NAME">NAME</H2>
@@ -72,6 +72,20 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 </p>
 
 <H2 id="PUBLICATIONS">PUBLICATIONS</H2>
+<dl><dt ><code>JOU-2023-101-55470 -</code> <a href="https://doi.org/10.1109/TIFS.2023.3287728" >Label Correlation in Deep Learning-Based Side-Channel Analysis</a>
+</dt><dd>
+<p>Lichao Wu, Léo Weissbart, Marina Krcek, Huimin Li, Guilherme Perin, Lejla Batina, Stjepan Picek</p>
+<p><i>IEEE Transactions on Information Forensics and Security - IEEE TIFS 2023</i><br>
+<span style="color:#999;">The efficiency of the profiling side-channel analysis can be significantly improved with machine learning techniques. Although 
+	powerful, a fundamental machine learning limitation of being data-hungry received little attention in the side-channel community. In practice, the maximum
+	number of leakage traces that evaluators/attackers can obtain is constrained by the scheme requirements or the limited accessibility of the target. 
+	Even worse, various countermeasures in modern devices increase the conditions on the profiling size to break the target. This work demonstrates a 
+	practical approach to dealing with the lack of profiling traces. Instead of learning from a one-hot encoded label, transferring the labels to their 
+	distribution can significantly speed up the convergence of guessing entropy. By studying the relationship between all possible key candidates, we 
+	propose a new metric, denoted Label Correlation (LC), to evaluate the generalization ability of the profiling model. We validate LC with two common 
+	use cases: early stopping and network architecture search, and the results indicate its superior performance.
+</span><br /></p></dd></dl>
+
 <dl><dt ><code>PUB-2021-720 -</code> <a href="https://eprint.iacr.org/2021/720" >On Reverse Engineering Neural Network Implementation on GPU</a> [<a href="files/2021-720.pdf">PDF</a>]
 </dt><dd>
 <p>Łukasz Chmielewski and Léo Weissbart</p>
@@ -176,11 +190,15 @@ Hardware Security,  Deep Learning, Implementation of Cryptography, Physical Atta
 	 (DiS) group, Radboud University (The Netherlands), ETH Zurich Information Security and Privacy Center (Switzerland) and Faculty of Electrical Engineering
 	  and Computing, University of Zagreb (Croatia). </span></p></dd></dt></dl>
 
+<dl><dt ><code>2022 - June.  Summer School on real-world crypto and privacy - Šibenik</code><dd><p><span style="color:#999;"><a href="https://summerschool-croatia.cs.ru.nl/2022/">Summer school</a> jointly organized by the Digital Security
+(DiS) group, Radboud University (The Netherlands), ETH Zurich Information Security and Privacy Center (Switzerland) and Faculty of Electrical Engineering
+	and Computing, University of Zagreb (Croatia). </span></p></dd></dt></dl>
+
 
 
     			<ol class='man-decor man-foot man foot'>
     				<li class='tl'></li>
-    				<li class='tc'> Feb 2022</li>
+    				<li class='tc'> Jul 2023</li>
     				<li class='tr'>Léo Weissbart</li>
     			</ol>
     		</div>
